fix : overflow of sidebar

--- a/pages/product-listing-page/product-listing.css
+++ b/pages/product-listing-page/product-listing.css
@@ -26,11 +26,7 @@
     height: 800px;
     padding: var(--sm-space);
     transition: all 0.2s ease-in-out;
-    overflow: scroll;
-}
-
-.filters::-webkit-scrollbar {
-    display: none;
+    overflow: hidden;
 }
 
 .filter-title {
@@ -156,7 +152,7 @@
         left: 0;
         z-index: 5;
         height: 100vh;
-        width: 70%;
+        width: 100%;
         background-color: var(--doc-section-color);
         transition: all 0.5s ease-in-out;
     }
